# otel-kubernetes-example

./: README.md
apps/: README.md  skaffold.yaml
apps/activities-api/: deployment.yml  kustomization.yaml  service.yaml
apps/gateway-api/: deployment.yml  ingress.yaml  kustomization.yaml  service.yaml
infra/: README.md  db.yaml  k3d-config.yaml  skaffold.yaml
infra/monitoring/: collector-values.yaml  kube-prometheus-stack-values.yaml  tempo-values.yaml
src/activities-api/: Dockerfile  app.py  otel_logging.py  otel_metrics.py  otel_tracing.py  pyproject.toml
src/gateway-api/: Dockerfile  app.py  otel_logging.py  otel_tracing.py  pyproject.toml
